feat: add 051 and 018 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -1,5 +1,15 @@
 ## 001
 
+### Directions
+
+You are supposed to write for the Postgraduates' Association a notice to recruit volunteers for an international
+conference on globalization. The notice should include the basic qualifications for applicants and other information
+which you think is relevant.
+You should write about 100 words On ANSWER SHEET 2.
+Do not sign your own name at the end of the notice. Use “Postgraduates' Association” instead.
+
+### Example
+
 <p align="center">Notice</p>
 <p align="right">January 9, 2010</p>
 &emsp;&emsp;&emsp;&emsp;Volunteers are needed for the International Conference on Globalization to be held on this campus in early July.<br>
@@ -7,7 +17,30 @@
 &emsp;&emsp;&emsp;&emsp;Call 86754321 or email postgr@ccc.edu.cn for an application and for information on the interview. Phone and email enquiries are encouraged; No visited please.<br>
 <p align="right">Postgraduates' Association</p>
 
+### 译文
+
+<p align="center">告 示</p>
+<p align="right">2010年1月9日</p>
+
+本校将于七月初举行关于全球化的国际研讨会，现招募志愿者。基本要求是熟悉本次会议的主题以及精通英语。其他要求包括良好的人际沟通能力熟悉我市的景点及历史、举止得体以及有较强的责任感。在国际会议或其他类似活动中具有相关经验者优先考虑。
+申请职位以及咨询面试相关信息，请致电86754321或发送邮件到postgr@ccc.edu.cn。欢迎垂询，谢绝来访。
+
+<p align="right">研究生会</p>
+
 ## 002
+
+### Directions
+
+You have just come back from the U.S. as a member of a Sino-American cultural exchange program. Write a letter to your
+American colleague to
+
+1. express your thanks for his/her warm reception;
+2. welcome him/her to visit China in due course.
+
+You should write about 100 words on ANSWER SHEET 2.
+Do not sign your own name at the end of the letter. Use “Zhang Wei” instead. Do not write your address.
+
+### Example
 
 Dear Bob,<br>
 &emsp;&emsp;&emsp;&emsp;I have just arrived at my home from the airport. As I sit down at my desk, I just want to write
@@ -19,6 +52,16 @@ of the places you would like to visit.<br>
 &emsp;&emsp;&emsp;&emsp;Please give my best regards to your family.<br>
 <p align="right">Yours,</p>
 <p align="right">Zhang Wei</p>
+
+### 译文
+
+亲爱的鲍勃:
+
+我刚从机场回到家里。坐在书桌旁，我只想给你写封信来感谢你在这次文化交流项目中的热情接待。你和你的家人给我留下了深刻的印象。这个项目真的是我一生中最美好的回忆之一。
+我记得你曾经提到过想来中国旅行。那么，如果你来到中国，你将受到热烈欢迎而且我将很荣幸做你的导游。如果你愿意的话，把你想参观的地方提前列张单子发给我。
+在此向你的家人致以诚挚的祝福。
+
+<p align="right">张伟</p>
 
 ## 003
 
@@ -42,7 +85,8 @@ Dear Sir or Madam,<br>
 a short period of time, I found it has some problems.<br>
 &emsp;&emsp;&emsp;&emsp;To begin with, the battery needs recharging after a mere 2 hours of use. This means that I need
 to carry my charger with me when I go out for a day. In addition, the buttons on the electronic dictionary **are** so
-small that it is nearly impossible to type anything with them. Personally, I find **this to be completely unacceptable**.<br>
+small that it is nearly impossible to type anything with them. Personally, I find **this to be completely unacceptable
+**.<br>
 &emsp;&emsp;&emsp;&emsp;Therefore, I would like **either to change for** another model that works better or a full
 refund. Your help is greatly appreciated.<br>
 <p align="right">**Yours** sincerely</p>
@@ -51,8 +95,13 @@ refund. Your help is greatly appreciated.<br>
 ## 005
 
 Dear Professor Smith<br>
-&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our new judge.<br>
-&emsp;&emsp;&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in the Students' **Auditorium** on May 12 (next Sunday). And we believe that you can give our **competitors** some enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event **will start** at around 7:00 p.m. and **last for** 2 hours at most. At the end of it, we will have some hand-made **presents** for each judge and competitor.<br>
+&emsp;&emsp;&emsp;&emsp;On behalf of the "Talents" English Speech Contest committee, I'm writing to invite you to be our
+new judge.<br>
+&emsp;&emsp;&emsp;&emsp;As **the core** of our "Foreign Culture Festival", this school-wide contest **is to be held** in
+the Students' **Auditorium** on May 12 (next Sunday). And we believe that you can give our **competitors** some
+enlightening comments as both a native-English speaker and a knowledgeable professor. Specifically, the event **will
+start** at around 7:00 p.m. and **last for** 2 hours at most. At the end of it, we will have some hand-made **presents**
+for each judge and competitor.<br>
 &emsp;&emsp;&emsp;&emsp;Once again, we sincerely hope you can be the judge **for** our competition.
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -60,8 +109,13 @@ Dear Professor Smith<br>
 ## 006
 
 Dear Professor Cook,<br>
-&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
-&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the Forbidden City, was the imperial palace of the Ming and Qing Dynasties. **It is also the largest piece of ancient Chinese architecture currently existing.** Meanwhile, the Great Wall, symbolizing China's ancient civilization, **is one of the world's most renowned projects**. **As the great creation of the ancient Chinese people and one of the wonders of the world**, it was listed as one of the world cultural heritage sites in 1987.<br>
+&emsp;&emsp;&emsp;&emsp;We are greatly honored to welcome you as a guest professor at our university. I would like to
+recommend two scenic spots in our city: the Palace Museum and the Great Wall.<br>
+&emsp;&emsp;&emsp;&emsp;The primary reasons are as follows. To begin with, the Palace Museum, also known as the
+Forbidden City, was the imperial palace of the Ming and Qing Dynasties. **It is also the largest piece of ancient
+Chinese architecture currently existing.** Meanwhile, the Great Wall, symbolizing China's ancient civilization, **is one
+of the world's most renowned projects**. **As the great creation of the ancient Chinese people and one of the wonders of
+the world**, it was listed as one of the world cultural heritage sites in 1987.<br>
 &emsp;&emsp;&emsp;&emsp;I hope you will have the opportunity to visit one or both of these spots. We wish you enjoy your
 stay in our city.<br>
 <p align="right">Yours sincerely,</p>
@@ -70,9 +124,14 @@ stay in our city.<br>
 ## 007
 
 Dear Professor Smith,<br>
-&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard University.<br>
-&emsp;&emsp;&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will require **surgery** on the same day as my departure. I am sorry to say that I will therefore not be able to make the travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a situation **does** not usually happen, and **apologize** for any **inconvenience** this may cause you.<br> 
-&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention to my suggestion would be highly appreciated.<br>
+&emsp;&emsp;&emsp;&emsp;I am looking forward to my travel to the United States and **visiting** you in Harvard
+University.<br>
+&emsp;&emsp;&emsp;&emsp;**Unfortunately**, I have recently been diagnosed with a serious ear infection which will
+require **surgery** on the same day as my departure. I am sorry to say that I will therefore not be able to make the
+travel plan. If possible, I would like to postpone the travel plan to another day later this year. I promise that such a
+situation **does** not usually happen, and **apologize** for any **inconvenience** this may cause you.<br>
+&emsp;&emsp;&emsp;&emsp;Please excuse me for not being able to inform you of my situation sooner. Your prompt attention
+to my suggestion would be highly appreciated.<br>
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
@@ -80,9 +139,16 @@ Dear Professor Smith,<br>
 ## 008
 
 Dear Paul,<br>
-&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an **oral** report on an ancient Chinese **scientist**, Bi Sheng is an ideal candidate.<br> 
-&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type printing technique. He mainly **used** clay type, which **saved** much time and money compared with block printing. After that, the movable type printing technique was widely promoted. China's printing technique was **spread** to the **Arabic region** during the Yuan Dynasty and then to **Africa and Europe**. Printing provided **a** significant condition for the European **science** to develop **rapidly** after the long night of the medieval period and **the emergence of the Renaissance**.<br>
-&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful presentation.<br>
+&emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. How have you been these days? Since you're going to **present** an *
+*oral** report on an ancient Chinese **scientist**, Bi Sheng is an ideal candidate.<br>
+&emsp;&emsp;&emsp;&emsp;In the middle of the 11 century during the Song **Dynasty**, Bi Sheng invented the movable type
+printing technique. He mainly **used** clay type, which **saved** much time and money compared with block printing.
+After that, the movable type printing technique was widely promoted. China's printing technique was **spread** to the *
+*Arabic region** during the Yuan Dynasty and then to **Africa and Europe**. Printing provided **a** significant
+condition for the European **science** to develop **rapidly** after the long night of the medieval period and **the
+emergence of the Renaissance**.<br>
+&emsp;&emsp;&emsp;&emsp;I hope you find the above recommendations useful. Looking forward to your successful
+presentation.<br>
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
@@ -91,8 +157,13 @@ Dear Paul,<br>
 
 Dear Paul,<br>
 &emsp;&emsp;&emsp;&emsp;I'm glad to hear from you. Thank you for your **enthusiastic** response to the event!<br>
-&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a **variety** of **innovative** Chinese craft-making, especially silk-making. Silk-making is a **handicraft inherited** from ancient China, as well as a traditional art form. Silk is a symbol of **ancient Chinese culture**, and the long history of China's silk industry is **a brilliant page** in the **encyclopedia** of Chinese culture.<br>
-&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on May 1, 2025. Could you please help me **to** write the letters of invitation **to** all the craftsmen? Looking forward to your support.<br>
+&emsp;&emsp;&emsp;&emsp;As you know, I will invite a great many **craftsmen** to our **campus**. They will show a *
+*variety** of **innovative** Chinese craft-making, especially silk-making. Silk-making is a **handicraft inherited**
+from ancient China, as well as a traditional art form. Silk is a symbol of **ancient Chinese culture**, and the long
+history of China's silk industry is **a brilliant page** in the **encyclopedia** of Chinese culture.<br>
+&emsp;&emsp;&emsp;&emsp;This event is going to be held in the Students' Recreation Center from 10:00 am to 4:00 pm on
+May 1, 2025. Could you please help me **to** write the letters of invitation **to** all the craftsmen? Looking forward
+to your support.<br>
 
 <p align="right">Yours faithfully,</p>
 <p align="right">Li Ming</p>
@@ -113,6 +184,20 @@ leading hero, Zhuge Liang. I'm sure you will be quite interested in it. Looking 
 
 ## 011
 
+### Directions
+
+Read the following email from your foreign friend Paul and write a reply.
+
+Dear Li Ming,
+Good news! I'm going to visit China this summer vacation, but I'm not sure which city to go. Can you introduce one city
+and give me some advice? Thank you for your help.
+Yours,
+Paul
+
+Write your answer in about 100 words on the ANSWER SHEETDo not use your own name in your email; use “Li Ming” instead
+
+### Example
+
 Dear Paul,<br>
 &emsp;&emsp;&emsp;&emsp;I'm extremely happy to learn you are coming to China! Here are my recommendations.<br>
 &emsp;&emsp;&emsp;&emsp;Since it's the first time you visit China. I highly recommend Beijing, the capital of China.
@@ -125,6 +210,15 @@ imperial city, is now a genuine metropolis. Looking forward to meeting you in Be
 
 <p align="right">Yours,</p>
 <p align="right">Li Ming</p>
+
+### 译文
+
+亲爱的保罗:
+得知你要来中国，我太高兴了!以下是我的一些建议。
+鉴于这是你第一次到访中国,我强烈推荐中国的首都北京。北京位于中国北方。作为政治文化、国际交流以及科技创新的中心，它吸引着来自全国各地的人才，同时向世界展示着中国的发展。
+至于旅游景点，我建议你参观故宫、长城和颐和园，这些景点都已被列入联合国《世界遗产名录》。可以说，北京这座曾经的古老皇城，如今已成为一座真正的大都市。期待在北京与你相见!
+
+<p align="right">李明</p>
 
 ## 012
 
@@ -176,7 +270,7 @@ information on the school's website at www.bfsu.edu.cn. The activity will be hel
 
 ## 015
 
-Dear Mr. Snakespeare,<br>
+Dear Mr. Shakespeare,<br>
 &emsp;&emsp;&emsp;&emsp;I am writing to express my heartfelt gratitude. I am referring to that unfortunate accident the
 other day, when I was knocked off my bike by a taxi.<br>
 &emsp;&emsp;&emsp;&emsp;If it had not been for your timely assistance in giving me first aid, I fear that the
@@ -200,18 +294,53 @@ you.<br>
 &emsp;&emsp;&emsp;&emsp;I am looking forward to hearing from you and, again, am sorry for any trouble this may have
 caused. Please excuse me for not being able to inform you of my situation sooner.<br>
 
-<p align="right">Your sincerely,</p>
+<p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
 
 ## 017
 
 Dear Sir or Madam,<br>
 &emsp;&emsp;&emsp;&emsp;I'm writing the note to apply for the job of teaching your daughter Chinese online.<br>
-&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable for this position for several reasons. Firstly, I graduated from Peking University with a bachelor's degree. Enclosed with this note is my resume, which details my previous academic qualifications. Secondly, I have been teaching kids from 8 to 12 years old since I entered college. Not only do my qualifications and experences make me a prefect candidate, but my cheerful personality is also well suited to work as a native tutor. Lastly, I am available every Sunday from 2 p.m. to 6 p.m.<br>
+&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable for this position for several reasons. Firstly, I graduated
+from Peking University with a bachelor's degree. Enclosed with this note is my resume, which details my previous
+academic qualifications. Secondly, I have been teaching kids from 8 to 12 years old since I entered college. Not only do
+my qualifications and experiences make me a prefect candidate, but my cheerful personality is also well suited to work
+as
+a native tutor. Lastly, I am available every Sunday from 2 p.m. to 6 p.m.<br>
 &emsp;&emsp;&emsp;&emsp;If you could grant me an interview, I would appreciate it.
 
 <p align="right">Yours sincerely,</p>
 <p align="right">Li Ming</p>
+
+## 018
+
+### Directions
+
+The Student Union of your department is planning to organize a Chinese speech contest for all the international students
+in your school. Write an announcement that covers the following information:
+
+1. the purpose of the contest,
+2. time and place of the contest, and
+3. details of the judges and awards.
+
+You should write about 100 words. Do not sign your own name at the end of the letter.Use “The Student Union of
+Department of Chinese Language and Literature” at the end of the announcement.
+
+### Example
+
+<p align="center">Notice</p>
+<p align="right">December 16, 2025</p>
+&emsp;&emsp;&emsp;&emsp;To enhance international students' ability to speak Chinese and enrich after-class activities for them, the Student Union of Department of Chinese Language and Literature is organizing a school-wide Chinese speech contest for international students, which is to be held on Saturday next week(December 27) at auditorium. Firstly five prestigious professors from Peking University and Tsinghua University will be invited to be the honorable judges. Secondly, the first six winners will be given awards.
+&emsp;&emsp;&emsp;&emsp;Those who are interested in taking part in it may sign up with the monitor of their classes before Tuesday next week. If the would-be candidates have any questions, please do not hesitate to context us at the following address: studentunion@163.com. Everybody is welcome to be present at the contest.
+<p align="right">The Student Union of Department of Chinese Language and Literature</p>
+
+### 译文
+
+<p align="center">通 知</p>
+<p align="right">2025年12月16日</p>
+为提高留学生们的中文表达能力，丰富他们的课外活动，中文系学生会将于下周六(12月27日)在大礼堂组织全校留学生进行中文演讲比赛。首先，我们将邀请五位来自北京大学和清华大学的知名教授担任尊贵的评委。其次，前六名获奖者将被授予奖项。
+有兴趣参加的同学请于下周二之前在本班班长处报名。如果准参赛者有任何问题，请按下述地址和我们联系:studentunion@163.com。欢迎大家积极参加本次大赛。
+<p align="right">中文系学生会</p>
 
 
 
