--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -1,11 +1,60 @@
 ## 041
 
-&emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries remained steady at just under 1 billion.<br>
-&emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid increase in economic development happening in developing countries, the telecommunication industry in those countries has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones which can narrow the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the extremely advanced economy of developed countries means less potential in many aspects and their demand for further enlargement tends to saturate.<br>
-&emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more attention to the market in developing countries.<br>
+&emsp;&emsp;From the information given in the above column chart, we can see a striking contrast between developing and
+developed countries in mobile-phone subscriptions from 2000 to 2008. During this period, there has been a dramatic
+increase from 0.4 to 4 billion mobile-phone subscriptions in developing countries, while those of developed countries
+remained steady at just under 1 billion.<br>
+&emsp;&emsp;At least two fundamental factors could have contributed to this phenomenon. On the one hand, with the rapid
+increase in economic development happening in developing countries, the telecommunication industry in those countries
+has expanded greatly to meet the demand of globalization. As a result, the user base of mobile phones which can narrow
+the distance between people and link the whole world together, grew at an incredible speed. On the other hand, the
+extremely advanced economy of developed countries means less potential in many aspects and their demand for further
+enlargement tends to saturate.<br>
+&emsp;&emsp;Although the fact remains that phones are already extremely prevalent in both developing and developed
+countries, the growing gap will continue to widen in the future. Therefore, mobile phone manufacturers should pay more
+attention to the market in developing countries.<br>
 
 ## 042
 
-&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64% among those in their forties, the highest among all the three age groups.<br>
-&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more satisfied with their jobs.<br>
-&emsp;&emsp;In view of the above reasoning, I am convenced that it is difficult for everyone to be content with their jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more attention to the walfare of their staff.<br>
+&emsp;&emsp;The table clearly reflects the statistics of staff's job satisfaction in a certain company. According to the
+data given above, we can conclude that the percentage of people satisfied with their jobs is the highest among those
+over 50 years old, at about 40%. In contrast, the percentage of the staff not satisfied with their jobs is about 64%
+among those in their forties, the highest among all the three age groups.<br>
+&emsp;&emsp;The major determinant of satisfaction lies in people's attitudes. On the one hand, staff members in their
+forties usually have to undertake a lot of responsibilities from both their families and their careers. So, they have
+the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from
+achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more
+satisfied with their jobs.<br>
+&emsp;&emsp;In view of the above reasoning, I am convenced that it is difficult for everyone to be content with their
+jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more
+attention to the walfare of their staff.<br>
+
+## 051
+
+### Directions
+
+Write an essay based on the chart. In your essay, you should
+1. describe and interpret the chart, and
+2. give your comments.
+
+### Example
+
+&emsp;&emsp;The column chart above clearly illustrates the operation mileage of high-speed railway in China between 2016
+and 2023. According to the diagram, between 2016 and 2017, the operating railway lines increased slightly from 22000
+kilometers to 25000 kilometers, a rise of merely 3000 kilometers. By contrast, it jumped markedly from 25000kilometers
+to 45000 kilometers between 2017 and 2023, an increase of 20000 kilometers within six years.
+&emsp;&emsp;The high-speed rail has significantly changed the lives of Chinese people. To begin with, it has driven the
+development of short-term tourism and economic prosperity. In addition, it allows passengers to shuttle between verious
+major cities in China in one day. Last but not least, it enables people to pursure job opportunities accross different
+provinces.
+&emsp;&emsp;Given all the arguments above, we may come to the conclusion that with the speedy development of economy,
+the mileage of high-speed railway in China will keep growing in the forthcoming decade.
+
+### 译文
+
+&emsp;&emsp;上面的柱状图清晰地展示了
+2016年至2023年间中国高铁的运营里程情况。根据该图表，从2016年至2017年，运营里程从2.2万公里小幅增长至2.5万公里，只增长了3千公里。相比之下，从2017年到2023年，运营里程从2.5万公里大幅增加至4.5万公里，在六年的时间内增长了2万公里。
+&emsp;&emsp;高铁极大地改变了中国人的生活。首先，它带动了短期旅游的发展,从而促进了经济繁荣。其次，它可以让旅客在一天内在中国多个大城市间穿梭。最后但同样重要的是，它使人们能够在不同省份之间寻找工作机会。
+&emsp;&emsp;鉴于上述所有论点，我们可以得出结论:随着经济的迅猛发展，中国高铁里程在未来十年将继续增长。 
+
+
