feat: add subject-clauses

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -331,7 +331,7 @@ Department of Chinese Language and Literature” at the end of the announcement.
 <p align="center">Notice</p>
 <p align="right">December 16, 2025</p>
 &emsp;&emsp;&emsp;&emsp;To enhance international students' ability to speak Chinese and enrich after-class activities for them, the Student Union of Department of Chinese Language and Literature is organizing a school-wide Chinese speech contest for international students, which is to be held on Saturday next week(December 27) at auditorium. Firstly five prestigious professors from Peking University and Tsinghua University will be invited to be the honorable judges. Secondly, the first six winners will be given awards.
-&emsp;&emsp;&emsp;&emsp;Those who are interested in taking part in it may sign up with the monitor of their classes before Tuesday next week. If the would-be candidates have any questions, please do not hesitate to context us at the following address: studentunion@163.com. Everybody is welcome to be present at the contest.
+&emsp;&emsp;&emsp;&emsp;Those who are interested in taking part in it may sign up with the monitor of their classes before Tuesday next week. If the would-be candidates have any questions, please do not hesitate to contact us at the following address: studentunion@163.com. Everybody is welcome to be present at the contest.
 <p align="right">The Student Union of Department of Chinese Language and Literature</p>
 
 ### 译文
