feat: add 019 write

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -338,10 +338,37 @@ Department of Chinese Language and Literature” at the end of the announcement.
 
 <p align="center">通 知</p>
 <p align="right">2025年12月16日</p>
-为提高留学生们的中文表达能力，丰富他们的课外活动，中文系学生会将于下周六(12月27日)在大礼堂组织全校留学生进行中文演讲比赛。首先，我们将邀请五位来自北京大学和清华大学的知名教授担任尊贵的评委。其次，前六名获奖者将被授予奖项。
-有兴趣参加的同学请于下周二之前在本班班长处报名。如果准参赛者有任何问题，请按下述地址和我们联系:studentunion@163.com。欢迎大家积极参加本次大赛。
+&emsp;&emsp;&emsp;&emsp;为提高留学生们的中文表达能力，丰富他们的课外活动，中文系学生会将于下周六(12月27日)在大礼堂组织全校留学生进行中文演讲比赛。首先，我们将邀请五位来自北京大学和清华大学的知名教授担任尊贵的评委。其次，前六名获奖者将被授予奖项。<br>
+&emsp;&emsp;&emsp;&emsp;有兴趣参加的同学请于下周二之前在本班班长处报名。如果准参赛者有任何问题，请按下述地址和我们联系:studentunion@163.com。欢迎大家积极参加本次大赛。<br>
 <p align="right">中文系学生会</p>
 
+## 019
+
+### Directions
+
+Write an announcement to welcome students to join a club, You should write about 100 words following the outline given below:
+
+1. main activities of the club,
+2. benefits of joining the club, and
+3. how to join the club.
+
+### Example
+<p align="center">Notice</p>
+<p align="right">December 21, 2025</p>
+&emsp;&emsp;&emsp;&emsp;Welcome to the English Club!This club serves as a platform to demonstrate your outstanding English abilities and to help you develop a range of English skills.<br>
+&emsp;&emsp;&emsp;&emsp;You can be involved in a variety of activities, including staging musical dramas, attending group discussions, watching Oscar-winning movies, and taking part in speeches and debates. These extracurricular activities are highly beneficial in multiple regards. First, your active participation will help in strengthening your sense of responsibility and developing interpersonal relations. Second, verious activities organized by us improve your level of proficiency in English. A good command of English will enable you to get an edge over your peers.<br>
+&emsp;&emsp;&emsp;&emsp;You can submit a written application for membership to our office of email us at englishclub@163.com. The deadline for applications is January 22. Come and join us now!<br>
+
+<p align="right">English Club</p>
+
+### 译文
+
+<p align="center">告示</p>
+<p align="right">2025年12月21日</p>
+&emsp;&emsp;&emsp;&emsp;欢迎加入英语俱乐部!这个平台可以让你展示自己出色的英语能力，并帮助你提高各项英语技能。<br>
+&emsp;&emsp;&emsp;&emsp;你可以参加各种各样的活动，包括表演音乐剧、参与小组讨论、观看奥斯卡获奖影片、参加演讲和辩论活动。这些课外活动在很多方面都大有裨益。首先，积极参与将有助于增强你的责任感和培养人际关系。其次，我们组织的丰富活动能提高你的英语熟练程度。良好的英语水平将使你比其他同龄人略胜一筹。<br>
+&emsp;&emsp;&emsp;&emsp;想成为会员的话，你可以把书面申请交到我们的办公室或发电子邮件到englishclub@163com。报名截止日期是1月22日。现在就来加入我们吧!<br>
+<p align="right">英语俱乐部</p>
 
 
 <p align="right"></p>
