feat: add appositive clauses

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -346,17 +346,19 @@ Department of Chinese Language and Literature” at the end of the announcement.
 
 ### Directions
 
-Write an announcement to welcome students to join a club, You should write about 100 words following the outline given below:
+Write an announcement to welcome students to join a club, You should write about 100 words following the outline given
+below:
 
 1. main activities of the club,
 2. benefits of joining the club, and
 3. how to join the club.
 
 ### Example
+
 <p align="center">Notice</p>
 <p align="right">December 21, 2025</p>
 &emsp;&emsp;&emsp;&emsp;Welcome to the English Club!This club serves as a platform to demonstrate your outstanding English abilities and to help you develop a range of English skills.<br>
-&emsp;&emsp;&emsp;&emsp;You can be involved in a variety of activities, including staging musical dramas, attending group discussions, watching Oscar-winning movies, and taking part in speeches and debates. These extracurricular activities are highly beneficial in multiple regards. First, your active participation will help in strengthening your sense of responsibility and developing interpersonal relations. Second, verious activities organized by us improve your level of proficiency in English. A good command of English will enable you to get an edge over your peers.<br>
+&emsp;&emsp;&emsp;&emsp;You can be involved in a variety of activities, including staging musical dramas, attending group discussions, watching Oscar-winning movies, and taking part in speeches and debates. These extracurricular activities are highly beneficial in multiple regards. First, your active participation will help in strengthening your sense of responsibility and developing interpersonal relations. Second, various activities organized by us can improve your level of proficiency in English. A good command of English will enable you to get an edge over your peers.<br>
 &emsp;&emsp;&emsp;&emsp;You can submit a written application for membership to our office of email us at englishclub@163.com. The deadline for applications is January 22. Come and join us now!<br>
 
 <p align="right">English Club</p>
