--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -25,9 +25,9 @@ forties usually have to undertake a lot of responsibilities from both their fami
 the least satisfaction in their jobs. On the other hand, people over 50 generally have shifted their life goals from
 achieving the ultimate success to a relatively easy and comfortable life, and therefore are inclined to be much more
 satisfied with their jobs.<br>
-&emsp;&emsp;In view of the above reasoning, I am convenced that it is difficult for everyone to be content with their
+&emsp;&emsp;In view of the above reasoning, I am convinced that it is difficult for everyone to be content with their
 jobs. And it is advisable that people should adjust their expectations for work, and that companies should pay more
-attention to the walfare of their staff.<br>
+attention to the welfare of their staff.<br>
 
 ## 051
 
@@ -41,11 +41,11 @@ Write an essay based on the chart. In your essay, you should
 
 &emsp;&emsp;The column chart above clearly illustrates the operation mileage of high-speed railway in China between 2016
 and 2023. According to the diagram, between 2016 and 2017, the operating railway lines increased slightly from 22000
-kilometers to 25000 kilometers, a rise of merely 3000 kilometers. By contrast, it jumped markedly from 25000kilometers
+kilometers to 25000 kilometers, a rise of merely 3000 kilometers. By contrast, it jumped markedly from 25000 kilometers
 to 45000 kilometers between 2017 and 2023, an increase of 20000 kilometers within six years.
 &emsp;&emsp;The high-speed rail has significantly changed the lives of Chinese people. To begin with, it has driven the
-development of short-term tourism and economic prosperity. In addition, it allows passengers to shuttle between verious
-major cities in China in one day. Last but not least, it enables people to pursure job opportunities accross different
+development of short-term tourism and economic prosperity. In addition, it allows passengers to shuttle between various 
+major cities in China in one day. Last but not least, it enables people to pursue job opportunities across different
 provinces.
 &emsp;&emsp;Given all the arguments above, we may come to the conclusion that with the speedy development of economy,
 the mileage of high-speed railway in China will keep growing in the forthcoming decade.
