update: vector notes

--- a/math/linear_algebra/matrix.tex
+++ b/math/linear_algebra/matrix.tex
@@ -131,6 +131,7 @@
             \item $A + (-A) = \mathbf{O}$
             \item $1A = A$
             \item $k(lA) = (kl)A$
+            \item $(kA)^n = k^{n}A^n$
             \item $k(A + B) = kA + kB$
             \item $(k + l)A = kA + lA$
         \end{enumerate}
@@ -485,7 +486,7 @@
     \begin{enumerate}
         \item 设 $\mathbf{A}$ 是 $m \times n$ 矩阵，$\mathbf{B}$ 是 $n \times s$ 矩阵，若 $\mathbf{AB} = \mathbf{O}$，则
         \begin{enumerate}
-            \item $\mathbf{B}$ 的列向量是其次方程组 $\mathbf{Ax} = 0$ 的解
+            \item $\mathbf{B}$ 的列向量是齐次方程组 $\mathbf{Ax} = 0$ 的解
             \item $r(\mathbf{A}) + r(\mathbf{B}) \le n$
         \end{enumerate}
         \item 若 $a_{ij} + A_{ij} = 0$ 则:
