--- a/math/linear_algebra/vector.tex
+++ b/math/linear_algebra/vector.tex
@@ -60,6 +60,7 @@
         \item 设有两个$n$维向量组$(I)\alpha_1, \alpha_2, \dots, \alpha_s$;$(II)\beta_1, \beta_2, \dots, \beta_t$，如果$(I)$中每个向量$\alpha_i(i = 1,2,\dots,s)$都可由$(II)$中的向量$\beta_1, \beta_2, \dots, \beta_t$线性表出，则称向量组$(I)$可由向量组$(II)$线性表出
         \item 如果$(I)(II)$这两个向量组可以互相线性表出，则称这两个\textbf{向量组等价}
         \item 在向量组$\alpha_1, \alpha_2, \dots, \alpha_s$中，若存在$r$个向量$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$线性相关，再加进任一向量$a_j(j = 1,2,\dots,\s)$，向量组$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}, \alpha_j$就线性相关，则称$\alpha_{i_1}, \alpha_{i_2}, \dots, \alpha_{i_r}$是向量组$\alpha_1, \alpha_2, \dots, \alpha_s$的一个\textbf{极大线性无关组}
+        \item 向量组$\alpha_1, \alpha_2, \dots, \alpha_s$的极大线性无关组中所含向量的个数$r$称为这个向量组的秩
     \end{enumerate}
 
     \subsection{定理}
@@ -85,8 +86,11 @@
         \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关，$\alpha_1, \alpha_2, \dots, \alpha_s, \beta$线性相关，则$\beta$可由$\alpha_1, \alpha_2, \dots, \alpha_s$线性表出，且\textbf{表示法唯一}
         \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$可由向量组$\beta_1, \beta_2, \dots, \beta_t$线性表出，且$s > t$，那么$\alpha_1, \alpha_2, \dots, \alpha_s$线性相关。即\textbf{如果多数向量能用少数向量线性表出，那么多数向量一定线性相关}
         \item 如果$\alpha_1, \alpha_2, \dots, \alpha_s$线性无关，且它可由可由$\beta_1, \beta_2, \dots, \beta_t$线性表出，则$s \le t$
-
-
+        \item 设$\alpha_1, \alpha_2, \dots, \alpha_s$可由$\beta_1, \beta_2, \dots, \beta_t$线性表出，则$r(\alpha_1, \alpha_2, \dots, \alpha_s) \le r(\beta_1, \beta_2, \dots, \beta_t)$
+        \item 如果$(I)(II)$是两个等价的向量组，则$r(I) = r(II)$
+        \item 如果$r(A) = r$，则$A$中有$r$个线性无关的列向量，而其他列向量都是这$r$个线性无关列向量的线性组合，也就是$r(A) = A$的列秩
+        \item 一般地，$r(A) = A \text{的列秩} = A \text{的行秩}$
+        \item $A$是$m \times n$矩阵，则$Ax = 0$的解向量组的秩为$\mathbf{n - r(A)}$
     \end{enumerate}
 
     \subsection{运算}
@@ -125,6 +129,13 @@
             \begin{enumerate}
                 \item \Leftrightarrow $[\alpha_1, \alpha_2, \dots, \alpha_s][x_1, x_2, \dots, x_s]^T = 0$只有零解
                 \item \Leftrightarrow \text{秩}$r(\alpha_1, \alpha_2, \dots, \alpha_s) = s$
+                \begin{enumerate}
+                    \item $r(A) = A\text{的列秩} = A\text{的行秩}$
+                    \item $r(AB) \le r(A) \text{且} r(AB) \le r(B)$
+                    \item 若$A$可逆，则$r(AB) = r(BA) = r(B)$
+                    \item 若$A$是$m \times n$矩阵，且$r(A) = n$，则$r(AB) = r(B)$
+                    \item 若$A$是$m \times n$矩阵，$B$是$n \times s$矩阵，且$AB = \mathbf{O}$，则$r(A) + r(B) \le n$
+                \end{enumerate}
             \end{enumerate}
             \item \textbf{反证法}
         \end{enumerate}
@@ -133,5 +144,10 @@
             \item 若已知向量坐标 \Rightarrow \text{非齐次线性方程组是否有解}
             \item 若向量坐标没有给出 \Rightarrow \text{线性相关 Or 秩}
         \end{enumerate}
+        \item $\text{向量组}(I)(II)\text{等价}$
+        \begin{align*}
+            &\Leftrightarrow\; r(I) = r(II) = r(I, II) \\
+            &\Leftrightarrow\; r(I) = r(II)\text{且}(I)\text{可由}(II)\text{线性表出}  \\
+        \end{align*}
     \end{enumerate}
 \end{document}
