feat: add Unit3

--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -57,4 +57,23 @@ the mileage of high-speed railway in China will keep growing in the forthcoming 
 &emsp;&emsp;高铁极大地改变了中国人的生活。首先，它带动了短期旅游的发展,从而促进了经济繁荣。其次，它可以让旅客在一天内在中国多个大城市间穿梭。最后但同样重要的是，它使人们能够在不同省份之间寻找工作机会。
 &emsp;&emsp;鉴于上述所有论点，我们可以得出结论:随着经济的迅猛发展，中国高铁里程在未来十年将继续增长。 
 
+## 052
+
+### Directions
+
+Write an essay on the chart. In your essay, you should
+1. describe and interpret the chart, and
+2. give your comments.
+
+### Example
+
+&emsp;&emsp;What is shown in the chart above indicates that by the end of 2023, the ownership of New Energy Vehicles(NEVs) in China reached 20.41 million. In the meantime, the newly registered NEVs throughout the year in China got to 7.43 million.<br>
+&emsp;&emsp;Why are NEVs booming nowadays? Several factors bring about this phenomenon. To begin with, the promotion of NEVs is an effective practice to ease impending energy shortages. It is universally acknowledged that we are likely to face a global energy shortage over the next few decades. More importantly, one significant benefit of developing NEVs is that can help to curb the problem of air pollution and thus promote a cleaner and greener environment. Last but not least, the NEV industry is regarded as a backbone, or key industry, acting as an engine of and supporting many subsidiary industries, such as steel, machinery, glass, rubber, tires, paints, and so on<br>
+&emsp;&emsp;Generally speaking, NEVs are an irresistible historical trend and a fashion, which we should embrace without hesitation.
+
+### 译文
+
+&emsp;&emsp;上面的图表显示，到 2023年底，我国新能源汽车保有量达到了2041万辆。与此同时全年新登记注册的新能源汽车达 743 万辆。<br>
+&emsp;&emsp;为什么如今新能源汽车发展如此迅猛?一些因素造成了这一现象。首先，推广新能源汽车是缓解迫在眉睫的能源短缺问题的一个有效做法。众所周知，未来几十年，我们很可能会面临世界能源短缺问题。更重要的是，发展新能源汽车的一个重大好处就是它们有助于遏制空气污染问题，从而促进形成更加清洁、环保的环境。最后但同样重要的是，新能源汽车产业被视为一大支柱产业或关键产业，带动并支持着钢铁、机械、玻璃、橡胶、轮胎、涂料等许多辅助产业的发展。<br>
+&emsp;&emsp;总之，新能源汽车是不可阻挡的历史潮流，是一种时尚，我们应该毫不犹豫地接受它。<br>
 
