update: attributive clause

--- a/english/write/001-020_letter.md
+++ b/english/write/001-020_letter.md
@@ -301,7 +301,7 @@ caused. Please excuse me for not being able to inform you of my situation sooner
 
 Dear Sir or Madam,<br>
 &emsp;&emsp;&emsp;&emsp;I'm writing the note to apply for the job of teaching your daughter Chinese online.<br>
-&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable for this position for several reasons. Firstly, I graduated
+&emsp;&emsp;&emsp;&emsp;I am sure that I am the suitable candidate for this position for several reasons. Firstly, I graduated
 from Peking University with a bachelor's degree. Enclosed with this note is my resume, which details my previous
 academic qualifications. Secondly, I have been teaching kids from 8 to 12 years old since I entered college. Not only do
 my qualifications and experiences make me a prefect candidate, but my cheerful personality is also well suited to work
