feat: add linear-system note

--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -8,6 +8,7 @@
 \usepackage{bm}             % 粗体
 \usepackage{xcolor}         % 颜色
 \usepackage{tabularx}       %表格环境
+\usepackage{tikz}           % TikZ 绘制主对角线斜线
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
 % =========================
@@ -28,17 +29,37 @@
 % =========================
 \begin{document}
 
-    \title{Template}
-    \author{Bowen}
-    \date{\today}
-    \maketitle
+%    \title{Template}
+%    \author{Bowen}
+%    \date{\today}
+%    \maketitle
 
 % =========================
 
     \section{title}
 
-    \subsection{subtitle}
+    \subsection{基础概念}
 
-    \subsubsection{sub subtitle}
+    \begin{enumerate}
+    \end{enumerate}
+
+    \subsection{定理}
+
+    \begin{enumerate}
+    \end{enumerate}
+
+    \subsection{运算}
+
+    \begin{enumerate}
+
+    \end{enumerate}
+
+    \subsection{公式}
+
+    \subsection{条件转换思路}
+
+    \begin{enumerate}
+
+    \end{enumerate}
 
 \end{document}
