feat: add 053 and 054 write

--- a/english/word/simple-word/markdown/p24-p26.md
+++ b/english/word/simple-word/markdown/p24-p26.md
@@ -368,8 +368,7 @@
 - fan
     - vt. **煽动，扇**；n. **狂热爱好者，迷**； 扇子
     - 煽动
-        - Favoritism(['feɪvərɪtˌɪzəm] 偏袒) in official(官方的) access can fan public perceptions([pərˈsepʃn] 看法) of corruption([kəˈrʌpʃn] 腐败).
-          官方渠道上的偏袒会加剧公众对腐败的印象
+        - Favoritism(['feɪvərɪtˌɪzəm] 偏袒) in official(官方的) access can fan/affect/provoke public perceptions([pərˈsepʃn] 看法) of corruption([kəˈrʌpʃn] 腐败). 官方渠道上的偏袒会加剧公众对腐败的印象
 - sad
     - adj. 悲伤的
     - sadness n. 悲伤；悲痛
