--- a/english/write/041-060_essay.md
+++ b/english/write/041-060_essay.md
@@ -37,6 +37,8 @@ Write an essay based on the chart. In your essay, you should
 1. describe and interpret the chart, and
 2. give your comments.
 
+![Chart](./assets/51.jpg)
+
 ### Example
 
 &emsp;&emsp;The column chart above clearly illustrates the operation mileage of high-speed railway in China between 2016
@@ -65,6 +67,8 @@ Write an essay on the chart. In your essay, you should
 1. describe and interpret the chart, and
 2. give your comments.
 
+![Chart](./assets/52.jpg)
+
 ### Example
 
 &emsp;&emsp;What is shown in the chart above indicates that by the end of 2023, the ownership of New Energy Vehicles(NEVs) in China reached 20.41 million. In the meantime, the newly registered NEVs throughout the year in China got to 7.43 million.<br>
@@ -77,3 +81,47 @@ Write an essay on the chart. In your essay, you should
 &emsp;&emsp;为什么如今新能源汽车发展如此迅猛?一些因素造成了这一现象。首先，推广新能源汽车是缓解迫在眉睫的能源短缺问题的一个有效做法。众所周知，未来几十年，我们很可能会面临世界能源短缺问题。更重要的是，发展新能源汽车的一个重大好处就是它们有助于遏制空气污染问题，从而促进形成更加清洁、环保的环境。最后但同样重要的是，新能源汽车产业被视为一大支柱产业或关键产业，带动并支持着钢铁、机械、玻璃、橡胶、轮胎、涂料等许多辅助产业的发展。<br>
 &emsp;&emsp;总之，新能源汽车是不可阻挡的历史潮流，是一种时尚，我们应该毫不犹豫地接受它。<br>
 
+## 053
+
+### Directions
+
+Write an essay on the chart. In your essay, you should
+1. describe and interpret the chart, and
+2. give your comments.
+
+![Chart](./assets/53.jpg)
+
+### Example
+
+&emsp;&emsp;The pie chart above clearly reveals the results of a survey on the average times of consumers' ordering takeaway per month in China in 2021. According to the data, the percentage of ordering takeaway from on to five times is the largest among the five groups, accounting for 35.2%; the percentage of ordering takeaway from six to ten times is 27%. In contrast, the percentage of never ordering takeaway merely takes up 18.5%.<br>
+&emsp;&emsp;Primary factors that result in the phenomenon may be summarized as follows. To begin with, with the quickening pace of urban life and ever-increasing work pressure in recent years, a good many people prefer ordering takeaway to going to a restaurant. In addition, in a bid to enjoy a comfortable life, instead of cooking by themselves, consumers in mounting numbers are willing to order takeaway in companies or at home. Lastly, the prosperous takeaway industry can be ascribed to the speedy development of online shopping and express delivery business.<br>
+&emsp;&emsp;Briefly speaking, the booming takeaway industry undoubtedly contributes to the prosperity of the economy.<br>
+
+### 译文
+
+以上饼状图清楚地显示了2021年中国消费者月均点外卖次数的调研结果。根据数据，在这五组中，点外卖1-5次的人数在这五组中占比最大，占35.2%;点外卖6-10次的人数占比为 27%。相比之下，从来不点外卖的人仅占18.5%。<br>
+造成上述现象的主要原因如下。首先，随着近年来都市生活节奏的加快以及工作压力的不断增加，比起去餐馆，很多人更喜欢点外卖。其次，为了享受舒适的生活，越来越多的消费者喜欢在公司或家里点外卖，而不是自己做饭。最后，繁荣的外卖行业应该归功于网上购物和快递产业的迅猛发展。<br>
+简言之，快速发展的外卖行业无疑有助于经济的繁荣。<br>
+
+
+## 054
+
+### Directions
+
+Write an essay on the chart. In your essay, you should
+1. describe and interpret the chart, and
+2. give your comments.
+
+![Chart](./assets/54.jpg)
+
+### Example
+
+&emsp;&emsp;The diagram above clearly reflects that China has made tremendous achievements in poverty alleviation from 2012 to 2020. During this period, China's impoverished rural population decreased considerably from nearly 100 million to nearly zero, a decline of 100 million. At the same time, the poverty headcount ratio also fell from approximately 10% to almost 0%.<br>
+&emsp;&emsp;Several primary factors for the above-mentioned changes can be summarized as follows. To begin with, the relevant authorities in China have adopted a combination of conventional and innovative approaches to improve rural education and healthcare. What is more, China has put great emphasis on the establishment of infrastructure in poor rural areas, which has effectively bridged the gap between the rich and the poor. Last but not least, these achievements can be attributed to China's speedy economic development during the past several decades.<br>
+&emsp;&emsp;In short, China's poverty alleviation campaign is vital both nationally and internationally. To start with, anti-poverty achievements have allowed more people to enjoy the advantages of China's economic boom. What is more, the Chinese government has fulfilled its promise of lifting all its citizens out of poverty.<br>
+
+### 译文
+
+上面的图表清楚地揭示了2012年到2020年间中国在扶贫方面取得的巨大成就。在此期间中国的农村贫困人口数量从大约1亿大幅减少到几乎为零，减少了近1亿。与此同时，农村的贫困人口比例从大约 10%下降到几乎为零。<br>
+促成上述变化的主要因素可以概括如下。首先，中国相关部门结合传统方法和创新方法，帮助改善了农村地区的教育和医疗水平。其次，中国非常重视农村贫困地区的基础设施建设，有效缩小了贫富差距。最后但同样重要的是,这一成就可以归功于过去几十年中国经济的快速发展。<br>
+总之，中国的扶贫战役对本国和世界都极为重要。首先，反贫困的成就让更多的人享受到中国经济繁荣的好处。更重要的是，中国政府已经实现了全民脱贫的承诺。<br>
