--- a/math/linear_algebra/quadratic-form.tex
+++ b/math/linear_algebra/quadratic-form.tex
@@ -36,7 +36,16 @@
 
 % =========================
 
-    \section{title}
+    \section{二次型}
+
+    \subsection{视频}
+
+    \begin{enumerate}
+        \item 二次型矩阵: 平方项对角线，混合项的系数被2除，放在对应位置上
+        \item 二次型的矩阵是唯一的，
+        \item 二次型矩阵 \Leftrightarrow \text{实对称矩阵} \quad \text{\color{red}{一一对应}}
+        \item 坐标变换关注{\color{red}{系数行列式不为0(可逆矩阵)}}，有无数多个坐标变换
+    \end{enumerate}
 
     \subsection{基础概念}
 
